network_policies/AllowHttpAndHttpsOnBackend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-allow-http-and-https-on-backend
spec:
  podSelector:
    matchLabels:
      role: backend
  ingress:
  - ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
  - podSelector:
      matchLabels:
        role: frontend
