network_policies/Eustaquio2Eustaquio.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: are-you-eustaquio
spec:
  podSelector:
    matchLabels: 
      primerNombre: eustaquio
  ingress:
  - from:
    - podSelector:
        matchLabels:
          primerNombre: eustaquio
  egress:
  - to:
    - podSelector:
        matchLabels:
          primerNombre: eustaquio
