network_policies/RejectEverything.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: angry-pod-demo
spec:
  podSelector:
  ingress: []
