network_policies/SameNamespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-namespace-pods-are-friends
spec:
  podSelector:
  ingress: 
  - from:
    - podSelector: {}
  - ports:
    - protocol: TCP
      port: 5432
